# cortex-py

./: .gitignore  Beispiel_KI_Tag_Generierung.md  CORTEX_CLI_READY.md  Makefile  README.md  ToDo.md  check_requirements.py  cortex-cli-wrapper  cortex_direct.py  cortex_fixed.py  create_structure.cypher  create_testing_modul.sh  final_test_fix.sh  find_dependency.sh  fix_cortex_cli_structure.sh  fix_cross_validate_linker.sh  fix_test_imports.sh  fix_tets.sh  main.py  mcp_cortex_server.py  mcp_cortex_server_simple.py  refactor_cortex_cli.sh  report.html  requirements-dev.txt  requirements.txt  run_cotex_tests.py  run_link_validation.sh  run_smoke_tests.py  run_tests.py  run_tests_unified.py  run_validate_links.sh  setup_cortex_cli.sh  start_fastapi_neon.sh  test_cli_cortex_neo.py  test_integrity_fix.py  update_suggestions.sh  validate_mcp_system.py  validate_workflow_structure.py
assets/: ai_workflow.puml  class_design.puml  communication_workflow.puml  system_architecture.puml
config/: claude_desktop_config.json
cortex-ai/: .gitignore
cortex-cli/: .gitignore  README.md  install.sh  (+4 more)
cortex/00-System/Test-Tools/: README.md  pyproject.toml
cortex/00-System/Test-Tools/src/cortex_test_framework/: __init__.py
cortex/00-System/Test-Tools/src/cortex_test_framework/cli/: __init__.py  ai_link_advisor.py  health_check.py  main.py
cortex/00-System/Test-Tools/src/cortex_test_framework/reports/: __init__.py  health_reporter.py
cortex/00-System/Test-Tools/src/cortex_test_framework/utils/: __init__.py  cortex_analyzer.py
cortex/00-System/Test-Tools/src/cortex_test_framework/validators/: __init__.py  link_validator.py
(+346 files in other folders)
