[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-test-framework"
version = "0.1.0"
description = "Test framework for Cortex AI Knowledge Management System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cortex Team", email = "noreply@cortex.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

[project.scripts]
cortex-test = "cortex_test_framework.cli.main:main"
cortex-link-advisor = "cortex_test_framework.cli.ai_link_advisor:main"
cortex-health-check = "cortex_test_framework.cli.health_check:main"

[project.urls]
Homepage = "https://github.com/sijadev/cortex"
Repository = "https://github.com/sijadev/cortex"
Issues = "https://github.com/sijadev/cortex/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cortex_test_framework = ["config/*.yaml", "templates/*.md"]